feat: register gateway customer and save internal customer
