# internal/api/io/http/controller/creditcard_controller/dto.go
@@ -21,7 +21,7 @@ type CreditcardType struct {
 type GetAllUserCreditcardsResponseDto struct {
 	Uuid           uuid.UUID      `json:"uuid" example:"767c1587-1ade-4e6a-a9fe-f0e07c83bda9"`
 	Name           string         `json:"name" binding:"required" example:"Testing"`
-	Number         string         `json:"number" binding:"required,min=8" example:"5574********9379"`
+	Number         string         `json:"number" binding:"required,min=8" example:"4242********4242"`
 	Expiration     time.Time      `json:"expiration" binding:"required" example:"2025-01-01T00:00:00Z"`
 	UserID         int32          `json:"userId" example:"1"`
 	CreatedAt      time.Time      `json:"createdAt" example:"2024-01-01T00:00:00Z"`
@@ -31,20 +31,21 @@ type GetAllUserCreditcardsResponseDto struct {
 
 type CreateRequestDto struct {
 	Name             string    `json:"name" binding:"required" example:"Testing"`
-	Number           string    `json:"number" binding:"required,min=8" example:"5574723384289379"`
-	Expiration       time.Time `json:"expiration" binding:"required" example:"2025-01-01T00:00:00Z"`
+	Number           string    `json:"number" binding:"required,min=8" example:"4242424242424242"`
+	Expiration       time.Time `json:"expiration" binding:"required" example:"2025-01-01"`
 	Priority         int32     `json:"priority" example:"1"`
 	NotifyExpiration bool      `json:"notifyExpiration" example:"true"`
 	CreditcardTypeID int32     `json:"creditcardTypeId" binding:"required,min=1" example:"1"`
 	CreditcardFlagID int32     `json:"creditcardFlagId" binding:"required,min=1" example:"1"`
+	Tokenize         bool      `json:"tokenize" binding:"required" example:"true"`
 }
 
 type CreateResponseDto struct {
 	ID               int32     `json:"id" example:"1"`
 	Uuid             uuid.UUID `json:"uuid" example:"767c1587-1ade-4e6a-a9fe-f0e07c83bda9"`
 	Name             string    `json:"name" binding:"required" example:"Testing"`
-	Number           string    `json:"number" binding:"required,min=8" example:"5574********9379"`
-	Expiration       time.Time `json:"expiration" binding:"required" example:"2025-01-01T00:00:00Z"`
+	Number           string    `json:"number" binding:"required,min=8" example:"4242********4242"`
+	Expiration       time.Time `json:"expiration" binding:"required" example:"2025-01-01"`
 	Priority         int32     `json:"priority" example:"1"`
 	NotifyExpiration bool      `json:"notifyExpiration" example:"true"`
 	UserID           int32     `json:"userId" example:"1"`
@@ -58,7 +59,7 @@ type CreateResponseDto struct {
 type UpdateRequestDto struct {
 	Name             string    `json:"name" binding:"required" example:"Testing Update"`
 	Number           string    `json:"number" binding:"required,min=8" example:"6643213384289379"`
-	Expiration       time.Time `json:"expiration" binding:"required" example:"2025-01-01T00:00:00Z"`
+	Expiration       time.Time `json:"expiration" binding:"required" example:"2025-01-01"`
 	Priority         int32     `json:"priority" example:"2"`
 	NotifyExpiration bool      `json:"notifyExpiration" example:"true"`
 	CreditcardTypeID int32     `json:"creditcardTypeId" binding:"required,min=1" example:"2"`
